# Dev-contitional

./: .env.example  ARCHITECT_PROFILE.md  CODE_OF_CONDUCT.md  COMMERCIAL_SUPPORT.md  CONTRIBUTING.md  DEVOPS_INTEGRATION_ROADMAP.md  Dockerfile  FOUNDATION_CHARTER.md  LICENSE  MARKETING_STRATEGY.md  MONETIZATION_PLAN.md  PROJECT_DESCRIPTIONS.md  README.md  SECURITY.md  backend_run_log.txt  backend_run_log_2.txt  backend_run_log_3.txt  backend_run_log_stable.txt  build_gamesa_v2.sh  dataset_compiler.py  docker-compose.yml  gamesa-cortex-v2_2.0.0_amd64.deb  package.json  pyproject.toml  requirements.txt  setup.py  test_ascii_entropy_demo.py  verify_config.py  verify_ui.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
advanced_cnc_copilot/: CORPORATE_LICENSE_GUIDE.md  FEATURE_IMPLEMENTATION_BLUEPRINT.md  NOTICE  README.md  SYSTEM_ARCHITECTURE.md  benchmark_full_stack.sh  build_intel_edition.sh  build_pc_edition.sh  build_ubuntu_iris.sh  kernel_tuning.sh
ascii_neural_compositor/: ARCHITECTURE_DIAGRAM.md  AUGMENTED_REALITY_RESEARCH.md  IMPLEMENTATION_GUIDE.md  NEURO_VISUAL_PARADIGM.md  README.md  ROADMAP_SPECTRAL_FEATURES.md  openvino_accelerator.py  run_demo.sh  vulkan_learner.py
compiled_dataset/: compilation_report.json  sample_0000_tech_standard.txt  sample_0001_nature_edge.txt  sample_0002_architecture_cyberpunk.txt  sample_0003_tech_retro.txt  sample_0004_nature_sketch.txt
docker/: Dockerfile.frontend  nginx.conf
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_BRAINSTORM.md  ARCHITECTURE_CONCEPTS.md  ARCHITECTURE_MAPPING.md  ASCII_STUDY_README.md  (+25 more)
(+147 files in other folders)
