[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "krystal-sdk"
version = "0.1.0"
description = "Drop-in adaptive intelligence with TD-learning, phase transitions, and swarm optimization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
full = ["numpy", "fastapi", "uvicorn"]
dev = ["pytest", "black", "mypy"]

[project.scripts]
krystal = "python.cli:main"
krystal-dashboard = "python.web_dashboard:run_server"

[tool.setuptools.packages.find]
where = ["src"]
